--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <h1>ОРГАНИЗАЦИЯ ПРОСТРАНСТВА ВАШЕГО ДОМА</h1>
             </div>
             <div class="photos-div">
-                <div class="photos">
-                    <div class="photo photo-2"></div>
-                    <div class="photo photo-3"></div>
+                <div class="photos" style="background-image: url(images/1.jpg); background-position: top;">
+                    <div class="photo photo-2" style="background-image: url(images/2.jpg);"></div>
+                    <div class="photo photo-3" style="background-image: url(images/3.jpg); background-position: 0 -1px"></div>
                     <div class="text-about-photo">
                         <p>
                             Я, Авраменко Юлия, помогаю создать удобный, продуманный порядок. Чтобы ваш дом был местом отдыха и счастья, а не полем боя и постоянного раздражения из-за хаоса.   
@@ -65,7 +65,8 @@
                 </p>
             </div>
             <div class="photo-div">
-                <div class="photo"></div>
+                <div class="photo1" style="background-image: url(images/4.jpg);"></div>
+                <div class="photo2" style="background-image: url(images/5.jpg);"></div>
             </div>
         </div>
 
@@ -127,7 +128,7 @@
             <h1>Авраменко Юлия, профессиональный организатор пространства.</h1>
             <div class="about">
                 <div class="photo-div">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/2.jpg);"></div>
                 </div>
                 <div class="description">
                     <p>
@@ -145,7 +146,7 @@
 
             <div class="zones">
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/6.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -158,7 +159,7 @@
 
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/7.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -170,7 +171,7 @@
                     <p class="p">ПРИХОЖАЯ</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/8.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -183,7 +184,7 @@
                     <p class="p">ВАННАЯ</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/9.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -196,7 +197,7 @@
                     <p class="p">ГАРДЕРОБ</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/10.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -216,7 +217,7 @@
 
             <div class="zones">
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/12.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -229,7 +230,7 @@
                     <p class="p">БАЛКОН</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/11.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -242,7 +243,7 @@
                     <p class="p">КАБИНЕТ</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/13.jpg);"></div>
                     <span>
                         <svg class="bx" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -255,7 +256,7 @@
                     <p class="p">КЛАДОВАЯ</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/15.jpg);"></div>
                     <span>
                         <svg class="bx bx1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -267,7 +268,7 @@
                     <p class="p">АПТЕЧКА</p>
                 </div>
                 <div class="zone-item">
-                    <div class="photo"></div>
+                    <div class="photo"  style="background-image: url(images/14.jpg);"></div>
                     <span>
                         <svg class="bx bx1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
@@ -280,7 +281,155 @@
                 </div>
             </div>
         </div>
+
+        <div class="section7">
+            <h1>УСЛУГИ ПО ОРГАНИЗАЦИИ ПРОСТРАНСТВА</h1>
+            <div class="services">
+                <div class="service service1">
+                    <h2>
+                        Офлайн или выездная организация.
+                    </h2>
+                    <ul>
+                        <li>
+                            осмотр раздражающей зоны дома, обсуждаем проблемы, что не устраивает, что хочется получить в итоге
+                        </li>
+                        <li>
+                            проводим оптимизацию вещей, разделяем их на категории
+                        </li>
+                        <li>
+                            делаю необходимые замеры, для подбора оргматериалов
+                        </li>
+                        <li>
+                            составляю план по организации, обсуждаем его, корректируем
+                        </li>
+                        <li>
+                            я или вы, по желанию, закупаем необходимые оргматериалы
+                        </li>
+                        <li>
+                            приезжаю ещё раз и все раскладываем, согласно плану, маркируем. 
+                        </li>
+                        <li>
+                            даю рекомендации по поддержанию порядка
+                        </li>
+                        <li>
+                            после организации 1 месяц бесплатная поддержка. Вы тестируете созданную систему. И при необходимости, мы ее корректируем.   
+                        </li>
+                    </ul>
+                    <p class="price">
+                        2000 руб/час
+                    </p>
+                    <button class="get_service">
+                        ХОЧУ ПОРЯДОК!
+                    </button>
+                    
+                </div>
+                <div class="service service2">
+                    <h2>
+                        Онлайн организация. 
+                    </h2>
+                    <ul>
+                        <li>
+                            общаемся через видеозвонок или в мессенджере по фото и видео от вас
+                        </li>
+                        <li>
+                            обсуждаем проблемы, что не устраивает, что хочется получить в итоге
+                        </li>
+                        <li>
+                            проводим оптимизацию вещей, разделяем их на категории
+                        </li>
+                        <li>
+                            рассказываю как сделать замеры, чтобы я смогла подобрать необходимые оргматериалы
+                        </li>
+                        <li>
+                            делаю для вас презентацию-план по организации со ссылками на необходимые органайзеры
+                        </li>
+                        <li>
+                            даю рекомендации по поддержанию порядка
+                        </li>
+                        <li>
+                            после организации 1 месяц бесплатная поддержка. Вы тестируете созданную систему. И при необходимости, мы ее корректируем. 
+                        </li>
+                    </ul>
+                    <p class="price">
+                        1500 руб/час
+                    </p>
+                    <button class="get_service">
+                        ПОМОГИТЕ!
+                    </button>
+                </div>
+                <div class="wrapper">
+                    <div class="service service3">
+                        <h2>
+                            Онлайн - консультация 
+                        </h2>
+                        <ul>
+                            <li>
+                                видеозвонок или общение в мессенджере по фото и видео. 
+                            </li>
+                            <li>
+                                ответы на вопросы по любым зонам вашего дома
+                            </li>
+                            <li>
+                                Когда вы готовы самостоятельно провести организацию своего дома и нужен свежий взгляд со стороны и варианты решения проблем.
+                            </li>
+                        </ul>
+                        <p class="price">
+                            2500 руб 1.5 часа
+                        </p>
+                        <button class="get_service">
+                            СПРОСИ МЕНЯ КАК
+                        </button>
+                    </div>
+                    <div class="service service4">
+                        <h2>
+                            Мастер-классы (онлайн, выездные) 
+                        </h2>
+                        <ul>
+                            <li>Мастер-класс "Порядочный шкаф"</li>
+                            <li>Мастер-класс "Кухня - сердце дома"</li>
+                        </ul>
+                        <p class="price">
+                            Онлайн 500 руб/чел <br>
+                            Офлайн цена договорная
+                        </p>
+                        <button class="get_service">
+                            ВЫЗОВ МАСТЕРА
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <input type="checkbox" id="check2">
+    <label for="check2">
+        <div class="text-me">
+            <svg class="text-me-icon message" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="-10 10 1024 1024">
+                <path fill="currentColor" d="M464 512a48 48 0 1 0 96 0a48 48 0 1 0-96 0m200 0a48 48 0 1 0 96 0a48 48 0 1 0-96 0m-400 0a48 48 0 1 0 96 0a48 48 0 1 0-96 0m661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.4 444.4 0 0 0-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.4 445.4 0 0 0-142 96.5c-40.9 41.3-73 89.3-95.2 142.8c-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 0 0 112 714v152a46 46 0 0 0 46 46h152.1A449.4 449.4 0 0 0 510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.5 444.5 0 0 0 142.8-95.2c41.3-40.9 73.8-88.7 96.5-142c23.6-55.2 35.6-113.9 35.9-174.5c.3-60.9-11.5-120-34.8-175.6m-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8c69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9c44.6 18.7 84.6 45.6 119 80c34.3 34.3 61.3 74.4 80 119c19.4 46.2 29.1 95.2 28.9 145.8c-.6 99.6-39.7 192.9-110.1 262.7" />
+            </svg>
+            <svg class='text-me-icon cross' xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 15 15">
+                <path fill="currentColor" fill-rule="evenodd" d="M11.782 4.032a.575.575 0 1 0-.813-.814L7.5 6.687L4.032 3.218a.575.575 0 0 0-.814.814L6.687 7.5l-3.469 3.468a.575.575 0 0 0 .814.814L7.5 8.313l3.469 3.469a.575.575 0 0 0 .813-.814L8.313 7.5z" clip-rule="evenodd" />
+            </svg>
+        </div>
+    </label>
+    <div class="contacts-text-me">
+        <div class="messenger">
+            <div class="photo" style="background-image: url(images/telegram.png);"></div>
+            <p>TELEGRAM</p>
+        </div>
+        <div class="messenger">
+            <div class="photo" style="background-image: url(images/whatsapp.png);"></div>
+            <p>WHATSAPP</p>
+        </div>
+        <div class="messenger">
+            <div class="photo" style="background-image: url(images/instagram.png);"></div>
+            <p>INSTAGRAM</p>
+        </div>
+        <div class="messenger">
+            <div class="photo" style="background-image: url(images/phone-call.png);"></div>
+            <p>PHONE</p>
+        </div>
+    </div>
+
     <div style="height: 100vh"></div>
 
     <script src="scripts/script.js"></script>
