--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="button_div">
-                <button class="create_request">СКОЛЬКО СТОИТ ПОРЯДОК?</button>
+                <button onclick="scroll_to('prices')" class="create_request">СКОЛЬКО СТОИТ ПОРЯДОК?</button>
             </div>
         </div>
 
@@ -283,7 +283,7 @@
         </div>
 
         <div class="section7">
-            <h1>УСЛУГИ ПО ОРГАНИЗАЦИИ ПРОСТРАНСТВА</h1>
+            <h1 class="scroll-elem" id="prices">УСЛУГИ ПО ОРГАНИЗАЦИИ ПРОСТРАНСТВА</h1>
             <div class="services">
                 <div class="service service1">
                     <h2>
