--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <span class="logo-small"></span>
+        <span class="logo-small">Магия порядка</span>
         <input type="checkbox" id="check">
         <label for="check" class="icons">
             <i class='bx bx-menu' id="menu-icon"></i>
