--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                     <p>TELEGRAM</p>
                 </div>
             </a>
-            <a href="https://wa.me/89261078551">
+            <a href="https://wa.me/+79261078551">
                 <div class="messenger">
                     <div class="photo" style="background-image: url(images/whatsapp.png);"></div>
                     <p>WHATSAPP</p>
