Добавил раздел "мои проекты"

--- a/index.html
+++ b/index.html
@@ -419,6 +419,49 @@
                 </div>
             </div>
         </div>
+
+        <div class="section8">
+            <h1 class="scroll-elem" id="examples">МОИ ПРОЕКТЫ</h1>
+            <div class="projects">
+                <div class="project">
+                    <div class="photos">
+                        <div class="before" style="background-image: url(images/16.jpg);"></div>
+                        <div class="after" style="background-image: url(images/17.jpg);"></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="photos">
+                        <div class="before" style="background-image: url(images/18.jpg);"></div>
+                        <div class="after" style="background-image: url(images/19.jpg);"></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="photos">
+                        <div class="before" style="background-image: url(images/20.jpg);"></div>
+                        <div class="after" style="background-image: url(images/21.jpg);"></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="photos">
+                        <div class="before" style="background-image: url(images/22.jpg);"></div>
+                        <div class="after" style="background-image: url(images/23.jpg);"></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="photos">
+                        <div class="before" style="background-image: url(images/24.jpg);"></div>
+                        <div class="after" style="background-image: url(images/25.jpg);"></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="photos">
+                        <div class="before" style="background-image: url(images/26.jpg);"></div>
+                        <div class="after" style="background-image: url(images/27.jpg);"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="section_with_contacts">
             <h1>НАПИШИТЕ МНЕ В ЛЮБОЙ УДОБНОЙ СОЦИАЛЬНОЙ СЕТИ!</h1>
             <div class="contacts">
