--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="photo photo-3" style="background-image: url(images/3.jpg); background-position: 0 -1px"></div>
                     <div class="text-about-photo">
                         <p>
-                            Я, Авраменко Юлия, помогаю создать удобный, продуманный порядок. Чтобы ваш дом был местом отдыха и счастья, а не полем боя и постоянного раздражения из-за хаоса.   
+                            Я, Авраменко Юлия, помогаю создать удобный, продуманный порядок. Чтобы ваш дом был местом отдыха и счастья, а не источником постоянного раздражения из-за хаоса.   
                         </p>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     </div>
                     <h2>Сохранение денег</h2>
                     <p>
-                        Перестаëте покупать дублирующиеся вещи, т. к. точно знаете что у вас дома есть, а чего нет.
+                        Перестаëте покупать дублирующиеся вещи, т.к. точно знаете что у вас дома есть, а чего нет.
                     </p>
                 </li>
                 <li>
@@ -133,9 +133,9 @@
                 </div>
                 <div class="description">
                     <p>
-                        Я многодетная мама и не понаслышке знаю как утомляет постоянный беспорядок. За 5 лет в профессии я помогла нескольким десяткам клиентов искренне полюбить свой дом, убрать из него скрытые раздражители и почувствовать что дом - это место силы и любви. <br><br>
-                        Я не уборщица. Я не протираю, не мою, а создаю устойчивую систему порядка для вас. <br><br>
-                        Не делаю ремонт. Не расширяю площадь, не переношу стены. Но, могу переставить/добавить полки, штанги в шкафу, подскажу размещение мебели и полезной площади станет больше. <br> <br>
+                        Я многодетная мама и не понаслышке знаю как утомляет постоянный беспорядок. За 4 года в профессии я помогла нескольким десяткам семей искренне полюбить свой дом, убрать из него скрытые раздражители и почувствовать что дом - это место силы и любви. <br><br>
+                        Я создаю устойчивую систему порядка для вас. <br><br>
+                        Не делаю ремонт. Не расширяю площадь, не переношу стены. Но, могу переставить или добавить полки, штанги в шкафу, подскажу размещение мебели и полезной площади станет больше. <br> <br>
                         Не учу вас жизни. Не сую свой нос куда не надо. Не даю советов, а предлагаю варианты решений - вы сами выбираете, что лучше. 
                     </p>
                 </div>
@@ -166,7 +166,7 @@
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
                         </svg>
                         <p class="description">
-                            удобный быстрый сбор перед выходом из дома, разбор и организация сезонного хранения.
+                            быстрые сборы перед выходом из дома, организация сезонного хранения вещей.
                         </p>
                     </span>
                     <p class="p">ПРИХОЖАЯ</p>
@@ -178,7 +178,7 @@
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
                         </svg>
                         <p class="description">
-                            уменьшение визуального шума, организация средств гигиены и уборки.
+                            уменьшение визуального шума, организация удобного хранения средств гигиены и уборки.
                         </p>
 
                     </span>
@@ -204,7 +204,7 @@
                             <path fill="currentColor" d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z" />
                         </svg>
                         <p class="description">
-                            организация удобного, понятного ребенку хранения игрушек, канцелярии, книг, одежды. 
+                            организация понятного ребенку хранения игрушек, канцелярии, книг, одежды. 
                         </p>
 
                     </span>
@@ -292,7 +292,7 @@
                     </h2>
                     <ul>
                         <li>
-                            осмотр раздражающей зоны дома, обсуждаем проблемы, что не устраивает, что хочется получить в итоге
+                            обсуждаем проблемную зону дома, что не устраивает, что хочется получить в итоге
                         </li>
                         <li>
                             проводим оптимизацию вещей, разделяем их на категории
@@ -380,9 +380,9 @@
                             <li>
                                 ответы на вопросы по любым зонам вашего дома
                             </li>
-                            <li>
+                            <p>
                                 Когда вы готовы самостоятельно провести организацию своего дома и нужен свежий взгляд со стороны и варианты решения проблем.
-                            </li>
+                            </p>
                         </ul>
                         <span>
                             <p class="price">
